--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  border: 1px solid hsl(240 5.9% 90%);
+  border: 1px solid var(--border);
   border-radius: 0.375rem;
   height: 2.25rem;
   padding: 0 0.75rem;
