--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
 
+:root {
+  --border: hsl(240 5.9% 90%);
+}
+
 body {
   font-family: "Inter", sans-serif;
 }
