chore: use space between on button group

--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -31,5 +31,8 @@
 
 .productCard .buttonGroup {
   display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: auto;
   gap: 1rem;
 }
