refactor: add edit funcionality on prodcut edit modal

--- a/src/components/ProductEditModal/ProductEditModal.module.css
+++ b/src/components/ProductEditModal/ProductEditModal.module.css
@@ -45,3 +45,9 @@
 .DialogCloseButton:focus {
   background-color: var(--border);
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
