--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,17 +2,31 @@
   font-family: inherit;
   border: none;
   cursor: pointer;
-
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
-  border: 1px solid var(--border);
   border-radius: 0.375rem;
   height: 2.25rem;
   padding: 0 0.75rem;
+  font-weight: 500;
+  background-color: transparent;
+  transition: background-color 0.2s ease-in-out;
 }
 
-.button:hover {
+.button.variant-default {
+  background-color: #fff;
+  border: 1px solid var(--border);
+}
+
+.button.button.variant-default:hover {
   background-color: hsl(240 4.8% 95.9%);
+}
+
+.button.variant-danger {
+  border: 1px solid var(--danger);
+  color: var(--danger);
+}
+
+.button.variant-danger:hover {
+  background-color: #fee2e2;
 }
