--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,3 +25,22 @@ body {
   height: 1rem;
   margin-right: 0.5rem;
 }
+
+.spinner {
+  width: 3rem;
+  height: 3rem;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
+}
